feat(plugin): Integrated Loki log collection and micrometer monitoring functions